--- a/templates/register.phtml
+++ b/templates/register.phtml
@@ -14,6 +14,7 @@
         
         <form action="/register" method="post" class="auth-form">
             <input type="text" name="username" placeholder="Nom d'utilisateur" required>
+            <input type="email" name="email" placeholder="Adresse e-mail" required>
             <input type="password" name="password" placeholder="Mot de passe (8 caractères min.)" required>
             <input type="password" name="password_confirm" placeholder="Confirmer le mot de passe" required>
             <button type="submit">S'inscrire</button>
