--- a/templates/login.phtml
+++ b/templates/login.phtml
@@ -15,7 +15,7 @@
         <form action="/login" method="post" class="auth-form">
             <input type="hidden" name="redirect_to" value="<?= htmlspecialchars($_GET['redirect_to'] ?? '') ?>">
             
-            <input type="text" name="username" placeholder="Nom d'utilisateur" required>
+            <input type="text" name="username" placeholder="Nom d'utilisateur ou E-mail" required>
             <input type="password" name="password" placeholder="Mot de passe" required>
             <button type="submit">Se connecter</button>
         </form>
@@ -24,9 +24,14 @@
             <p class="error-message"><?= htmlspecialchars($error_message) ?></p>
         <?php endif; ?>
 
-        <p class="auth-link">
-            Pas encore de compte ? <a href="/register">Inscrivez-vous</a>
-        </p>
+        <div class="auth-links-container">
+            <p class="auth-link">
+                Pas encore de compte ? <a href="/register">Inscrivez-vous</a>
+            </p>
+            <p class="auth-link">
+                <a href="/forgot-password">Mot de passe oublié ?</a>
+            </p>
+        </div>
     </div>
 
 </body>
