--- a/templates/challenge-page.phtml
+++ b/templates/challenge-page.phtml
@@ -50,6 +50,6 @@
         </div>
     </main>
     
-    <script src="/js/challenge.js" defer></script>
+    <script src="/js/challenge-page.js" defer></script>
 </body>
 </html>
