--- a/templates/lessons.phtml
+++ b/templates/lessons.phtml
@@ -64,7 +64,7 @@
                             <?= htmlspecialchars($lesson['difficulty']) ?>
                         </span>
                     </div>
-                    <p><?= htmlspecialchars(mb_substr($lesson['description'], 0, 100)) ?>...</p>
+                    <p><?= htmlspecialchars($lesson['description']) ?></p>
                 </div>
                 <div class="check-box">
                     <i class="checkbox-icon completed fas fa-check"></i>
