fix validation leçon

--- a/templates/lesson-page.phtml
+++ b/templates/lesson-page.phtml
@@ -51,7 +51,7 @@
             $is_completed = !empty($lesson['is_completed']);
 
             if ($is_completed) {
-                $button_text = 'Validé <i class="fas fa-check"></i>';
+                $button_text = 'Validée <i class="fas fa-check"></i>';
                 $button_class = 'validated';
                 $button_disabled_attribute = 'disabled';
             } else {
