--- a/templates/lesson-page.phtml
+++ b/templates/lesson-page.phtml
@@ -73,7 +73,12 @@
 
         </div>
     </main>
-    
+
+    <?php
+        require ROOT_PATH . '/templates/partials/modal.phtml';
+    ?>
+
+    <script src="/js/modal.js" defer></script>
     <script src="/js/lesson-page.js" defer></script>
 </body>
 </html>
