navigation chall et leçons

--- a/templates/challenge-page.phtml
+++ b/templates/challenge-page.phtml
@@ -56,11 +56,11 @@
                     <?php
                     $is_completed = !empty($challenge['is_completed']);
                     if ($is_completed) {
-                        $button_text = 'Validé <i class="fas fa-check"></i>';
+                        $button_text = 'Challenge validé <i class="fas fa-check"></i>';
                         $button_class = 'btn-glass validated';
                         $button_disabled = 'disabled';
                     } else {
-                        $button_text = 'Valider';
+                        $button_text = 'Soumettre le flag <i class="fas fa-arrow-right"></i>';
                         $button_class = 'btn-glass';
                         $button_disabled = '';
                     }
