--- a/templates/lesson-page.phtml
+++ b/templates/lesson-page.phtml
@@ -51,11 +51,11 @@
             $is_completed = !empty($lesson['is_completed']);
 
             if ($is_completed) {
-                $button_text = 'Validée <i class="fas fa-check"></i>';
+                $button_text = 'Leçon validée <i class="fas fa-check"></i>';
                 $button_class = 'validated';
                 $button_disabled_attribute = 'disabled';
             } else {
-                $button_text = 'Valider la leçon <i class="fas fa-check" aria-hidden="true"></i>';
+                $button_text = 'Valider la leçon <i class="fas fa-arrow-right" aria-hidden="true"></i>';
                 $button_class = '';
                 $button_disabled_attribute = '';
             }
