--- a/templates/challenges.phtml
+++ b/templates/challenges.phtml
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Nos Challenges - Kr[HACK]ademy</title>
+    <title>Challenges - Kr[HACK]ademy</title>
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
     <link rel="stylesheet" href="/css/style.css"/>
