--- a/templates/index.phtml
+++ b/templates/index.phtml
@@ -6,7 +6,7 @@
     <meta name="keywords" content="cybersécurité, apprendre, hacking éthique, leçons, challenges, scénarios, Krhacken, Esisar">
     <meta name="author" content="BRUCHON Hugo">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kr[HACK]ademy - Apprenez la cybersécurité en ligne</title>
+    <title>Accueil - Kr[HACK]ademy</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
     <link rel="stylesheet" href="/css/style.css"/>
