--- a/templates/index.phtml
+++ b/templates/index.phtml
@@ -18,7 +18,7 @@
 </head>
 <body>
 
-    <?php require __DIR__ . '/partials/header.php';?>
+    <?php require __DIR__ . '/partials/header.phtml';?>
 
     <main class="main">
         <section class="intro">
@@ -140,7 +140,7 @@
         </section>
     </main>
 
-    <?php require __DIR__ . '/partials/footer.php';?>
+    <?php require __DIR__ . '/partials/footer.phtml';?>
 
     <script src="/js/index.js" defer></script>
     <script src="/js/header.js" defer></script>
