--- a/templates/challenges.phtml
+++ b/templates/challenges.phtml
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-    <?php require __DIR__ . '/partials/header.php'; ?>
+    <?php require __DIR__ . '/partials/header.phtml'; ?>
 
     <main class="main">
         <?php
@@ -63,7 +63,7 @@
         <?php endforeach; ?>
     </main>
 
-    <?php require __DIR__ . '/partials/footer.php'; ?>
+    <?php require __DIR__ . '/partials/footer.phtml'; ?>
     
     <script src="/js/header.js" defer></script>
     <script src="/js/progress-tracker.js" defer></script>
